# perfectly-balanced

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  clippy.toml  rustfmt.toml
.cargo/: config.toml
migrations/: 001_initial.sql  002_add_source_mtime.sql  003_lean_schema.sql
plugin/: rc.perfectly-balanced
plugin/event/: started  stopping_svcs
plugin/pages/: perfectly-balanced.page
plugin/pkg/: perfectly-balanced.plg
src/: main.rs  state.rs
src/api/: mod.rs  responses.rs
src/api/handlers/: disks.rs  execution.rs  mod.rs  plan.rs  scan.rs  settings.rs  sse.rs  status.rs
src/balancer/: mod.rs  planner.rs  types.rs
src/config/: defaults.rs  mod.rs  parser.rs  settings.rs  validation.rs
src/db/: disk_queries.rs  file_queries.rs  mod.rs  models.rs  move_queries.rs  optional_ext.rs  plan_queries.rs
src/events/: hub.rs  mod.rs
src/executor/: mod.rs  recovery.rs
src/scanner/: discovery.rs  disk_space.rs  mod.rs  scan.rs  validation.rs
src/tests/: balancer_tests.rs  config_tests.rs  db_tests.rs  mod.rs  scanner_tests.rs
